filerestserver/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-rsrv
spec:
  replicas: 2
