filerestserver/overlays/prod/strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-rsrv
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
