filerestserver/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: files-rsrv-ingress
spec:
  rules:
    - host: filesrsrv.ct.int.ingv.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: files-rsrv-svc
                port:
                  number: 9095
